--- a/README.org
+++ b/README.org
@@ -2960,6 +2960,26 @@ Needed to dispatch on command passed to :around advice.")
        (puthash (symbol-function #',name) #',local-name --local-defuns) ; FIXME broken if the stub is overwritten
        (advice-add #',name :around #'advice--has-local-defuns))))
 
+(defun defalias-local (symbol definition &optional docstring)
+  "Define a buffer local alias. NOTE only works for functions.
+It is not really needed for variables since `setq-local' covers
+nearly every use case. Note that the way this is defined uses
+`defun-local' so it probably does not behave like a real alias."
+  (if (symbol-function definition)
+     (defun-local symbol (&rest args)
+       docstring
+       (apply definition args))
+    (error "%S does not point to a function" definition)))
+
+(defun raw-symbol-function (name)
+  "Return unadvised form of NAME. NOT THREAD SAFE."
+  (unwind-protect
+      (progn
+        (advice-remove name #'advice--has-local-defuns)
+        (symbol-function name))
+    ;; FIXME > assuming that name was previously advised
+    (advice-add name :around #'advice--has-local-defuns)))
+
 (defun advice--fmakunbound-local (command &rest args)
   "Advise COMMAND `fmakunbound' to be aware of `defun-local' forms."
   (if --local-defun-names
