--- a/README.org
+++ b/README.org
@@ -1673,6 +1673,66 @@ the minimal local variables will be used if possible."
 # (orgstrap--dedoc '(defmacro lol (arg) "there" arg))
 # (orgstrap--dedoc '((defmacro lol (arg) "there" arg) (defvar lol 'hello "there")))
 *** Extras
+#+caption: extra helpers
+#+name: orgstrap-extra-helper-defuns
+#+begin_src elisp :noweb yes
+;;; extra helpers
+
+(defun orgstrap-update-src-block (name content)
+  "Set the content of source block named NAME to string CONTENT.
+XXX NOTE THAT THIS CANNOT BE USED WITH #+BEGIN_EXAMPLE BLOCKS."
+  ;; FIXME this seems to fail if the existing block is empty?
+  ;; or at least adding file local variables fails?
+  (let ((block (org-babel-find-named-block name)))
+    (if block
+        (save-excursion
+          (org-babel-goto-named-src-block name)
+          (org-babel-update-block-body content))
+      (error "No block with name %s" name))))
+
+(defun orgstrap-get-src-block-checksum (&optional cypher)
+  "Calculate of the checksum of the current source block using CYPHER."
+  (interactive)
+  (let* ((info (org-babel-get-src-block-info))
+         (params (nth 2 info))
+         (body-unexpanded (nth 1 info))
+         (body (orgstrap--expand-body info))
+         (body-normalized
+          (orgstrap-norm body))
+         (cypher (or cypher (orgstrap--current-buffer-cypher))))
+    (ignore params body-unexpanded)
+    (secure-hash cypher body-normalized)))
+
+(defun orgstrap-get-named-src-block-checksum (name &optional cypher)
+  "Calculate the checksum of the first sourc block named NAME using CYPHER."
+  (interactive)
+  (orgstrap--with-block name
+    (ignore params body-unexpanded)
+    (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
+          (body-normalized
+           (orgstrap-norm body)))
+      (secure-hash cypher body-normalized))))
+
+(defun orgstrap-run-additional-blocks (&rest name-checksum) ;(ref:oab)
+  "Securely run additional blocks in languages other than elisp.
+Do this by providing the name of the block and the checksum to be embedded
+in the orgstrap block as NAME-CHECKSUM pairs."
+  (ignore name-checksum)
+  (error "TODO"))
+#+end_src
+
+Ideally we want to call [[(oab)][orgstrap-run-additional-blocks]] as
+=(orgstrap-run-additional-blocks "additional-block-name" "checksum-value-hash-thing" "ab2" "cs2")=
+It probably makes sense to house this in its own orgstrap-aux block or something.
+I want to keep the file local variables as minimal as possible, so having another
+aux block that could be automatically updated with the names and hashes of additional
+blocks would be nice ... probably via something like =orgstrap-add-additional-block=
+but it will not go in the local variables because we want there to be some hope of
+orgstrap being portable to other platforms outside of Emacs at some point in the
+very distant future, so keeping the machinery outside of the org file itself as
+minimal as possible is critical.
+*** Do
+**** Thinking
 For the software life cycle see man:ebuild.
 
 There are some steps that fall outside most sane uses for orgstrap but
@@ -1829,12 +1889,53 @@ Long version.
     able to batch sync contents of the file is useful, e.g.  I have
     used a python script to pull the contents of google docs into an
     org file.
+**** Funs
+#+begin_src elisp
+(defmacro orgstrap-do ()
+  "A mini language for describing what to run.")
+(defalias 'od #'orgstrap-do)
+#+end_src
+***** Examples/Tests
+Lots of things to think about in terms of how these statements would
+expand. Shadowing is a big deal, as well as implicit dependencies and
+how defaults are handled if things are not in an od expression. Maybe
+easier to implement this in Racket due to ~syntax-parse~?
+#+begin_src elisp
+(od all)
+(od (not all))
+(od (not all) (config services))
+(od (config services))
+(od deps) ; this is redundant
+(od (only deps))
+(od (only deps) tangle) ; should error? (od-only deps) avoids this?
+(od (not deps)) ; prevent any deps from installing
+(od deps tangle build deploy)
+(od (deps all) tangle build deploy)
+(od (deps build) tangle build deploy)
+(od (deps run) config)
+(od (deps services) (not (config emacs)))
+(od (deps services) (config (not emacs)))
+(od (deps all)
+    (export html pdf)
+    (build))
+(od tangle)
+(od run)
+(od (build html))
+(od (export html))
+(od export)
+(od (convert gfm))
 
-#+caption: extra helpers
-#+name: orgstrap-extra-helper-defuns
-#+begin_src elisp :noweb yes
-;;; extra helpers
+(od (run all))
+(od (run deposit))
+(od (only (run deposit)))
+(od (run deploy))
+(od (deps deploy) (run deploy))
 
+(setq orgstrap-do-defaults (od (not (config emacs))))
+#+end_src
+**** Vars
+#+name: orgstrap-do
+#+begin_src elisp
 ;; orgstrap-do-*
 
 ;; variables to enable/disable certain functionality when an
@@ -1864,94 +1965,71 @@ this functionality."
 Other phases might also do some tangling, but they would be
 controlled separately."
 
+;; TODO consider whether using an enumerate value might make more sense
+;; e.g. orgstrap-deps '(nil :emacs :system) and then blocks could set
+;; their requirements?
 ;(defvar orgstrap-do-deps nil "Install all packages.")
 ;(defvar orgstrap-do-dependencies nil "Install all packages.")
 ;(defvar orgstrap-do-install-dependencies nil "Install all packages.")
 ;(defvar orgstrap-do-install-prerequisites nil "Install all packages.")
-(defcustom orgstrap-do-packages nil "Install all packages." :type 'boolean)
+;(defvar orgstrap-do-deps-code nil "")
+;(defvar orgstrap-do-deps-runtime nil "")
+;(defvar orgstrap-do-deps-toolchain nil "")
+;(defvar orgstrap-do-deps-data nil "")
+(defcustom orgstrap-do-packages nil "Install some packages." :type 'boolean)
 (defcustom orgstrap-do-packages-emacs nil "Install Emacs packages." :type 'boolean)
 (defcustom orgstrap-do-packages-system nil "Install system packages." :type 'boolean)
 
+(defcustom orgstrap-do-data nil "Retrieve external data needed by file.") ; TODO naming etc.
+;; note that external data here would be data that the process described by the org file
+;; needs _locally_ in order to function, there are also many cases where the workflow
+;; described by the file might simply bootstrap a local working environment and code
+;; that will be used to manage and run data that sits elsewhere
+
 ;(defcustom orgstrap-do-setup nil "Run other setup steps.")  ; FIXME this is closer to emerge --config
+(defcustom orgstrap-do-config nil "Run code that modifies some configuration." :type 'boolean)
+(defcustom orgstrap-do-config-emacs nil "Run code that modifies the Emacs configuration." :type 'boolean)
+(defcustom orgstrap-do-config-system nil "Run code that modifies the system configuration." :type 'boolean)
+;(defcustom orgstrap-do-config-services nil "Run code that modifies the services configuration." :type 'boolean)
+
 (defcustom orgstrap-do-services nil "Run services needed by file." :type 'boolean)
 
-(defcustom orgstrap-do-config nil "Run code that modifies the Emacs config." :type 'boolean)
-;(defcustom orgstrap-do-config-emacs nil "Run code that modifies the Emacs config")
+;; the great divide (after this comes batch functionality)
 
 (defvar orgstrap-do-run nil "`org-babel-execute-buffer'")
 
-(defvar orgstrap-do-export nil)
-(defvar orgstrap-do-publish nil)
+(defvar orgstrap-do-export nil "Run export.") ; TODO format XXX -do-build-document ox-ssh being an odd one
+(defvar orgstrap-do-publish nil "Run publish workflow.")
 
-(defvar orgstrap-do-tangle nil)
+(defvar orgstrap-do-tangle nil "`org-babel-tangle-file'.")
 
 (defvar orgstrap-do-build nil
   ;; build may imply tangle in cases where tangle is relevant
   "produce one or more artifacts derived from the portions of the file with mechanical semantics")
 
 (defvar orgstrap-do-test nil "Run tests.")
+;(defvar orgstrap-do-test-elisp nil "Run tests on elisp for the file.") ;  not clear we need this? XXX NAMING
+;(defvar orgstrap-do-test-tangle nil "Run tests on the output of tangle.") ;  not clear we need this?
+;(defvar orgstrap-do-test-build nil "Run tests on the output of build.") ;  not clear we need this?
 ;; Running tests via a batch process can be a bit tricky if the test code is also part of the orgstrap block.
 ;; tests may test any part of the org file, tangled output, documentation, build artifacts, etc.
 ;; if you have an org file that itself specifies a set of tests for some larger system
 ;; then that would be called as part of -do-run and -do-test would be used to test the tests
 
-;; other parts of the software lifecycle
-(defcustom orgstrap-do-package nil "???" :type 'boolean)
-(defcustom orgstrap-do-release nil "???" :type 'boolean)
+;; dev stage prod passed some other way? in some cases a separate org file might make more sense?
+;; not if a single file defines multiple different blocks that enable different functionality
+;; as discussed elsewhere, trying to flatten a high dimensional workflow into boolean args is hard
+(defvar orgstrap-do-deploy nil "Deploy build artifacts somewhere.")
+(defvar orgstrap-do-deposit nil "Deposit build artifacts somewhere.")
 
-(defun orgstrap-update-src-block (name content)
-  "Set the content of source block named NAME to string CONTENT.
-XXX NOTE THAT THIS CANNOT BE USED WITH #+BEGIN_EXAMPLE BLOCKS."
-  ;; FIXME this seems to fail if the existing block is empty?
-  ;; or at least adding file local variables fails?
-  (let ((block (org-babel-find-named-block name)))
-    (if block
-        (save-excursion
-          (org-babel-goto-named-src-block name)
-          (org-babel-update-block-body content))
-      (error "No block with name %s" name))))
-
-(defun orgstrap-get-src-block-checksum (&optional cypher)
-  "Calculate of the checksum of the current source block using CYPHER."
-  (interactive)
-  (let* ((info (org-babel-get-src-block-info))
-         (params (nth 2 info))
-         (body-unexpanded (nth 1 info))
-         (body (orgstrap--expand-body info))
-         (body-normalized
-          (orgstrap-norm body))
-         (cypher (or cypher (orgstrap--current-buffer-cypher))))
-    (ignore params body-unexpanded)
-    (secure-hash cypher body-normalized)))
-
-(defun orgstrap-get-named-src-block-checksum (name &optional cypher)
-  "Calculate the checksum of the first sourc block named NAME using CYPHER."
-  (interactive)
-  (orgstrap--with-block name
-    (ignore params body-unexpanded)
-    (let ((cypher (or cypher (orgstrap--current-buffer-cypher)))
-          (body-normalized
-           (orgstrap-norm body)))
-      (secure-hash cypher body-normalized))))
-
-(defun orgstrap-run-additional-blocks (&rest name-checksum) ;(ref:oab)
-  "Securely run additional blocks in languages other than elisp.
-Do this by providing the name of the block and the checksum to be embedded
-in the orgstrap block as NAME-CHECKSUM pairs."
-  (ignore name-checksum)
-  (error "TODO"))
+;; other
+(defvar orgstrap-do-sync nil "Have the file synchronize itself with some remote.")
+(defvar orgstrap-do-git-pull nil "Have the file synchronize itself with some remote.")
+(defvar orgstrap-do-git-commit nil "Have the file synchronize itself with some remote.")
+(defvar orgstrap-do-git-push nil "Have the file synchronize itself with some remote.")
+;(defcustom orgstrap-do-package nil "???" :type 'boolean) ; XXX superseded by build
+;(defcustom orgstrap-do-release nil "???" :type 'boolean) ; XXX superseded by deposit
 #+end_src
-
-Ideally we want to call [[(oab)][orgstrap-run-additional-blocks]] as
-=(orgstrap-run-additional-blocks "additional-block-name" "checksum-value-hash-thing" "ab2" "cs2")=
-It probably makes sense to house this in its own orgstrap-aux block or something.
-I want to keep the file local variables as minimal as possible, so having another
-aux block that could be automatically updated with the names and hashes of additional
-blocks would be nice ... probably via something like =orgstrap-add-additional-block=
-but it will not go in the local variables because we want there to be some hope of
-orgstrap being portable to other platforms outside of Emacs at some point in the
-very distant future, so keeping the machinery outside of the org file itself as
-minimal as possible is critical.
 ** orgstrap.el :noexport:
 # XXX TODO it would be a super cool feature if xref could resolve to elisp source
 # blocks in org-mode files, because then half the need for the .el file would go away
@@ -2924,6 +3002,11 @@ expected in org babel blocks. It would seem so. This won't work with
 reval unless reval-materialize is run since reval runs in a separate
 buffer, but most things in reval should conform to general elisp best
 practices so that is less of an issue.
+
+Apparently this isn't entirely new, I just couldn't find the right
+search terms https://www.emacswiki.org/emacs/BufferLocalCommand. The
+approach described there is much more elegant than the one below, but
+it doesn't handle name collisions which is out primary use case.
 
 # TODO check what happens if the advised function is overwritten
 # TODO fmakunbound doesn't quite work as desired, may need to advise it
