break defun-local into its own file defl.org, update rest accordinly
currently pulling defl into ow.el but not into ow-min.el, may need to
revisit that, all supporting reval supporting el files have been
updated, note that there was a bad bug in ow-min.el where its update
function did not match the file, probably need a way to check for that
since that is an easy copy paste issue and also a potential vector for
a bait and switch where the primary file is ok but the update function
points to a malicious file (which is why I wanted a static solution to
this problem, but decided that it was likely not worth the effort and
just warn people to audit the *--reval-update function).

--- a/orgware.org
+++ b/orgware.org
@@ -39,7 +39,7 @@ for bootstrap, or that can be reloaded, or installed as a package.
 
 <<ow-utils>>
 
-(defun ow--reval-update ()
+(defun ow-min--reval-update ()
   "Get the immutable url for the current remote version of this file."
   (reval-get-imm-github "tgbugs" "orgstrap" "ow-min.el"))
 
@@ -80,6 +80,8 @@ for bootstrap, or that can be reloaded, or installed as a package.
 ;;; Code:
 
 <<reval-impl>>
+
+<<defl-impl>>
 
 <<run-command>>
 
@@ -586,6 +588,7 @@ All errors are silenced."
 #+name: orgstrap
 #+begin_src elisp :results none :lexical yes
 (defun ow---pre-tangle ()
+  (org-babel-lob-ingest "./defl.org")
   ;; ensure that reval has been ingested so we can tangle the reval-impl block
   (org-babel-lob-ingest "./reval.org"))
 
