--- a/README.org
+++ b/README.org
@@ -2724,132 +2724,7 @@ of minimal wrappers for the various CI systems that will be sufficient
 to kick off the testing. See https://github.com/purcell/nix-emacs-ci
 for one way we might approach this.
 ** Buffer local functions
-The best way to avoid these issues is to upstream common functions
-into ~ow-~ directly, but orgstrap is designed to be completely
-distributed, so it does fall on the user.
-
-The other way around this issue is to run orgstrapped files in a
-separate Emacs process. This is suboptimal.
-
-There might be a way to implement buffer local functions using
-~advice-add :around~ and manually dispatching by buffer.
-[[info:elisp#Advice Combinators]]
-
-Internally ~defun~ uses ~defalias~ to bind the name so in theory we
-can replace that step with a check to see if a function is already
-bound to that name. If not we create a stub ~(lambda (&rest rest)
-nil)~ or something for the global name. Once the function exists
-advise it with ~has-local-defuns~ which can be used to handle the
-dispatch per buffer. Most of the time it will fall through.
-
-The other possibility would be to keep a list of all the functions as
-add a hook to switch buffer hook or something like that an have it
-advise to ~:override~ with the buffer local value on the way in, and
-then remove the override with leave buffer hook, but those hooks don't
-actually exist [[info:elisp#Standard Hooks]], so we are left with checking
-each time.
-
-The good news is actually that most of the time you don't actually have
-to do this. You just have to keep in place in case the name gets redefined?
-Then you dispatch? None if this is going to be performant. Especially in a
-tight loop.
-
-So after implementing ~defun-local~ I'm wondering whether it works as
-expected in org babel blocks. It would seem so. This won't work with
-reval unless reval-materialize is run since reval runs in a separate
-buffer, but most things in reval should conform to general elisp best
-practices so that is less of an issue.
-
-Apparently this isn't entirely new, I just couldn't find the right
-search terms https://www.emacswiki.org/emacs/BufferLocalCommand. The
-approach described there is much more elegant than the one below, but
-it doesn't handle name collisions which is out primary use case.
-
-# TODO check what happens if the advised function is overwritten
-# TODO fmakunbound doesn't quite work as desired, may need to advise it
-#+name: local-defun-impl
-#+begin_src elisp :results none :lexical yes
-(defvar-local --local-defuns nil
-  "A hash table that maps global closures to local function symbols.
-Needed to dispatch on command passed to :around advice.")
-
-(defvar-local --local-defun-names nil
-  "A hash table that maps global function symbols to local function symbols.")
-
-(defun advice--has-local-defuns (command &rest args)
-  "Advise COMMAND with ARGS to check if there are buffer local defuns."
-  (let ((command (or (and --local-defuns (gethash command --local-defuns))
-                     command)))
-    (apply command args)))
-
-(defmacro defun-local (name arglist &optional docstring &rest body)
-  "Define a buffer local function."
-  (declare (doc-string 3) (indent 2))
-  (unless --local-defuns
-    (setq-local --local-defuns (make-hash-table :test #'equal)))
-  (unless --local-defun-names
-    (setq-local --local-defun-names (make-hash-table)))
-  (let ((docstring (if docstring (list docstring) docstring))
-        (local-name (or (gethash name --local-defun-names)
-                        (puthash name (cl-gentemp (format "%S-" name)) --local-defun-names))))
-    `(prog1
-         (defun ,local-name ,arglist ,@docstring ,@body)
-       (unless (fboundp ',name)
-         (defun ,name (&rest args) (error "global stub for defun-local %s" #',name))
-         (put ',name 'defun-local-stub t))
-       (puthash (symbol-function #',name) #',local-name --local-defuns) ; FIXME broken if the stub is overwritten
-       (advice-add #',name :around #'advice--has-local-defuns))))
-
-(defun defalias-local (symbol definition &optional docstring)
-  "Define a buffer local alias. NOTE only works for functions.
-It is not really needed for variables since `setq-local' covers
-nearly every use case. Note that the way this is defined uses
-`defun-local' so it probably does not behave like a real alias."
-  (if (symbol-function definition)
-     (defun-local symbol (&rest args)
-       docstring
-       (apply definition args))
-    (error "%S does not point to a function" definition)))
-
-(defun raw-symbol-function (name)
-  "Return unadvised form of NAME. NOT THREAD SAFE."
-  (unwind-protect
-      (progn
-        (advice-remove name #'advice--has-local-defuns)
-        (symbol-function name))
-    ;; FIXME > assuming that name was previously advised
-    (advice-add name :around #'advice--has-local-defuns)))
-
-(defun advice--fmakunbound-local (command &rest args)
-  "Advise COMMAND `fmakunbound' to be aware of `defun-local' forms."
-  (if --local-defun-names
-      (let* ((name (car args))
-             (local-name (gethash name --local-defun-names)))
-        ;; FIXME hard to know when it is safe to remove the stubs
-        ;; without maintaining a list of local symbol names
-        ;; and we need that functionality to be able to sanely
-        ;; remove the has-local-defuns advice
-        ;; (if (get name 'defun-local-stub))
-        (if local-name
-            (progn
-              (apply command (list local-name))
-              ;; FIXME how to remove the value from --local-defuns ... it is advised
-              ;; so how to get the unadvised closure passed to :around?
-              ;; (remhash (symbol-function name) --local-defuns)
-              (remhash name --local-defun-names))
-          (apply command args)))
-    (apply command args)))
-
-;;(advice-add #'fmakunbound :around #'advice--fmakunbound-local)
-#+end_src
-
-#+begin_src elisp
-(defun-local hrm (a b c) 1 2 3 "OH YEAH")
-(hrm 1 2 3)
-(defun-local hrm (a b c d) 1 "OH NO")
-(hrm 1 2 3 4)
-;;(defun-local )
-#+end_src
+See [[file:./defl.org]].
 ** TODO fix orgstrap--update-on-change hook so that it does not modify buffer fold state
 :PROPERTIES:
 :CREATED:  [2020-10-21 Wed 01:28]
